Fixed overflowing h2 on small screens

--- a/css/underpage.css
+++ b/css/underpage.css
@@ -28,6 +28,7 @@ h1 {
   text-align: center;
   text-shadow: 3px 3px 12px #6f6f6f;
   margin-top: 75px;
+  overflow-wrap: break-word;
 }
 
 .textbox {
@@ -39,13 +40,17 @@ h1 {
 h2 {
   text-align: center;
   color: #CFDB42;
-  font-size: 40px;
+  font-size: 2.5em;
   font-weight: lighter;
   margin: 0;
   margin-bottom: 20px;
+  overflow-wrap: break-word;
 }
 
 @media screen and (max-width: 960px) {
+  h2 {
+    font-size: 2em;
+  }
   .textbox {
     width: auto !important;
     left: 0 !important;
